Stats position fixed in bottom left corner for better visibility

--- a/Ludum Dare 28/public_html/css/style.css
+++ b/Ludum Dare 28/public_html/css/style.css
@@ -55,11 +55,14 @@ h1,h2,h3,h4,h5,h6 {
     margin-bottom: 16px;
 }
 
-#stats {
+#stats-wrapper {
     text-align:center;
+    position:fixed;
+    left:20px;
+    bottom:20px;
 }
 
-#stats > div#stats {
+#stats-wrapper > div#stats {
     display:inline-block;
     margin-right:10px;
 }
